Altered the css of the images a little bit. There was unwanted padding at the bottom of them on mobile. Seeing if this will fix it.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,7 @@
 
 .image {
 	width:100%;
+	padding-bottom: 0px;
 }
 .container img {
 	width:100%;
